--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Zach Turner – Portfolio</title>
-  <meta name="description" content="Front-end developer portfolio – WordPress VIP, Drupal migrations, custom Gutenberg blocks, and enterprise plugins." />
+  <meta name="description" content="Software Engineer portfolio – WordPress VIP, Drupal migrations, custom Gutenberg blocks, and enterprise plugins." />
   <meta property="og:title" content="Zach Turner – Portfolio" />
   <meta property="og:description" content="WordPress VIP · Drupal · Gutenberg · Enterprise plugins" />
   <meta property="og:type" content="website" />
@@ -24,7 +24,7 @@
           <a href="#work">Work</a>
           <a href="#about">About</a>
           <a href="#contact">Contact</a>
-          <a class="btn" href="Zachary_Turner_Resume_2025_with_short_summary.pdf" target="_blank" rel="noopener">Resume</a>
+          <a class="btn" href="assets/pdfs/Zachary_Turner_Resume_2025_with_short_summary.pdf" target="_blank" rel="noopener">Resume</a>
         </nav>
       </div>
     </header>
@@ -32,8 +32,7 @@
    <main class="wrap" id="main-content">
       <section class="hero">
         <div>
-          <div class="kicker">Front-End Developer</div>
-        <h1>Front-End Developer · Scalable Web Solutions</h1>
+        <h1>Software Engineer</h1>
         <p class="lead">
           While I have extensive experience delivering enterprise-grade WordPress VIP and Drupal platforms, my work spans far beyond CMS development — creating scalable plugins, custom UI components, API integrations, and performance-focused architectures across diverse stacks and tools.
         </p>
@@ -65,9 +64,11 @@
           <article class="item col-6 card project-card">
             <h3>Drupal → WordPress Migration Plugin</h3>
             <p>Automated migration of nodes, media, and taxonomies from Drupal into block-based WordPress content. Replaced &lt;drupal-entity&gt; embeds with media-safe HTML and mapped categories. Recursive traversal preserves nested order and skips unpublished/missing nodes.</p>
-            <p>
-              <a class="btn" href="case-studies/migration.html">Full case study</a>
-            </p>
+           <div class="card-actions">
+              <a class="btn btn--primary" data-icon="arrow" href="case-studies/migration.html">
+                Full case study
+              </a>
+            </div>
             <div class="stack" style="margin-top:8px">
               <span class="pill">Plugin</span>
               <span class="pill">PHP</span>
@@ -80,9 +81,11 @@
           <article class="item col-6 card project-card">
             <h3>Programs Carousel (Gutenberg, SSR)</h3>
             <p>Server-rendered carousel that surfaces location-relevant programs using geo data from a cookie. Optionally merges page categories with editor-selected categories, exposes neutral hooks for the data layer, and supports an ad slot without breaking layout.</p>
-            <p>
-              <a class="btn" href="case-studies/programs-carousel.html">Full case study</a>
-            </p>
+            <div class="card-actions">
+              <a class="btn btn--primary" data-icon="arrow" href="case-studies/programs-carousel.html">
+                Full case study
+              </a>
+            </div>
             <div class="stack" style="margin-top:8px">
               <span class="pill">Gutenberg</span>
               <span class="pill">SSR</span>
@@ -95,9 +98,11 @@
           <article class="item col-6 card project-card">
             <h3>Dresser / Drawer Nested Blocks</h3>
             <p>Parent/child block system enabling editors to assemble complex layouts. OOP architecture, attributes persistence, and editor-friendly controls.</p>
-            <p>
-              <a class="btn" href="case-studies/dresser.html">Full case study</a>
-            </p>
+            <div class="card-actions">
+              <a class="btn btn--primary" data-icon="arrow" href="case-studies/dresser.html">
+                Full case study
+              </a>
+            </div>
             <div class="stack" style="margin-top:8px">
               <span class="pill">Gutenberg</span>
               <span class="pill">React</span>
@@ -110,9 +115,11 @@
           <article class="item col-6 card project-card">
             <h3>Multisite Plugin Permission Manager</h3>
             <p>Scoped plugin management so Admins can manage a curated set on USL sites while preserving Super Admin control network-wide.</p>
-            <p>
-              <a class="btn" href="case-studies/permission-manager.html">Full case study</a>
-            </p>
+            <div class="card-actions">
+              <a class="btn btn--primary" data-icon="arrow" href="case-studies/permission-manager.html">
+                Full case study
+              </a>
+            </div>
             <div class="stack" style="margin-top:8px">
               <span class="pill">Multisite</span>
               <span class="pill">Capabilities</span>
@@ -124,9 +131,11 @@
           <article class="item col-6 card project-card">
             <h3>Aggregation Plugin (Pages)</h3>
             <p>Taxonomy-aware aggregation for Pages: split “article type” vs. regular categories with <code>any</code>/<code>all</code> logic, exclude special categories, and return a normalized model (sponsor, sport, featured flags) for the UI. Ships a REST endpoint that provides hierarchical category options and lookup tables for the editor.</p>
-            <p>
-              <a class="btn" href="case-studies/aggregation.html">Full case study</a>
-            </p>
+            <div class="card-actions">
+              <a class="btn btn--primary" data-icon="arrow" href="case-studies/aggregation.html">
+                Full case study
+              </a>
+            </div>
             <div class="stack" style="margin-top:8px">
               <span class="pill">WP_Query</span>
               <span class="pill">REST</span>
